--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,6 +3,7 @@ on:
   workflow_dispatch:
 env:
   IMAGE_NAME: myserver
+  IMAGE_TAG: latest
 jobs:
   push:
     runs-on: ubuntu-latest
@@ -31,4 +32,4 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/${{ IMAGE_NAME }}:latest
+          tags: ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
