--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     "webman/admin": "~2.0",
     "illuminate/database": "^12.6",
     "webman/log": "^2.1",
-    "webman/console": "^2.1"
+    "webman/console": "^2.1",
+    "vlucas/phpdotenv": "^5.6"
   },
   "suggest": {
     "ext-event": "For better performance. "
