--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
     "illuminate/database": "^12.6",
     "webman/log": "^2.1",
     "webman/console": "^2.1",
-    "vlucas/phpdotenv": "^5.6"
+    "vlucas/phpdotenv": "^5.6",
+    "webman-micro/migrations": "^2.0"
   },
   "suggest": {
     "ext-event": "For better performance. "
