移除sqlite相关的东西

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # 是否开启调试模式
 APP_DEBUG=true
 
-# 数据库类型支持：mysql、sqlite
+# 数据库类型支持：mysql
 DB_TYPE=mysql
 
 # mysql配置
@@ -12,6 +12,3 @@ DB_MYSQL_USER=root
 DB_MYSQL_PASS=root
 DB_MYSQL_CHARSET=utf8mb4
 DB_MYSQL_CHARSET_COLLATION=utf8mb4_general_ci
-
-# sqlite配置
-DB_SQLITE_DB=./myserver.db
