--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "ext-json": "*",
     "ext-sockets": "*",
     "ext-curl": "*",
+    "ext-ssh2": "*",
     "workerman/webman-framework": "^2.1",
     "monolog/monolog": "^2.0",
     "webman/admin": "~2.0",
@@ -36,7 +37,9 @@
     "webman/log": "^2.1",
     "webman/console": "^2.1",
     "vlucas/phpdotenv": "^5.6",
-    "webman-micro/migrations": "^2.0"
+    "webman-micro/migrations": "^2.0",
+    "tinywan/jwt": "^1.11",
+    "react/stream": "3.x-dev"
   },
   "suggest": {
     "ext-event": "For better performance. "
