--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,9 @@
     "vlucas/phpdotenv": "^5.6",
     "webman-micro/migrations": "^2.0",
     "tinywan/jwt": "^1.11",
-    "react/stream": "3.x-dev"
+    "react/stream": "3.x-dev",
+    "phpseclib/phpseclib": "^3.0",
+    "revolt/event-loop": "^1.0"
   },
   "suggest": {
     "ext-event": "For better performance. "
@@ -64,5 +66,8 @@
     ]
   },
   "minimum-stability": "dev",
-  "prefer-stable": true
+  "prefer-stable": true,
+  "require-dev": {
+    "swoole/ide-helper": "^6.0"
+  }
 }
