--- a/composer.json
+++ b/composer.json
@@ -39,9 +39,7 @@
     "vlucas/phpdotenv": "^5.6",
     "webman-micro/migrations": "^2.0",
     "tinywan/jwt": "^1.11",
-    "react/stream": "3.x-dev",
-    "phpseclib/phpseclib": "^3.0",
-    "revolt/event-loop": "^1.0"
+    "react/stream": "3.x-dev"
   },
   "suggest": {
     "ext-event": "For better performance. "
